--- a/Project.web/wwwroot/css/site.css
+++ b/Project.web/wwwroot/css/site.css
@@ -8,8 +8,25 @@ form i {
   right: 1rem;
 }
 
-.loginRightSide {
-  background-color: antiquewhite;
-  border: 1px solid grey;
+#loginRightSide {
+  background-color: rgb(215, 230, 250);
+  border: 2px solid black;
+  border-radius: 2rem;
+  /* animation: 1.5s fadeInUp; */
+}
+
+/* @keyframes fadeInUp {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+} */
+
+#Login-body{
+  background-image: linear-gradient(to right, #09203F , #537895);
 }
 
