--- a/Project.web/Views/Home/UserIndex.cshtml
+++ b/Project.web/Views/Home/UserIndex.cshtml
@@ -1,4 +1,6 @@
 @{
     ViewData["Title"] = "Home";
 }
-Helloooo User
+<div class="text-center">
+    <h1 class="display-4">Welcome User</h1>
+</div>
