--- a/Project.web/Views/Login/Login.cshtml
+++ b/Project.web/Views/Login/Login.cshtml
@@ -47,6 +47,16 @@
                         <span class="text-danger fw-bold" asp-validation-for="Password"></span>
                     </div>
 
+                    <div class="row mt-2">
+                        <div class="col-sm-6 col-12">
+                            <div class="form-group  form-check">
+                                <input type="checkbox" asp-for="RememberMe" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Remember Me
+                                    ?</label>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="row mt-4 mb-lg-0 mb-5 ">
                         <div class="col-12 d-grid ">
                             <button type="submit" class="btn btn-primary-lg btn-primary">Submit</button>
