--- a/Project.web/Views/Home/Index.cshtml
+++ b/Project.web/Views/Home/Index.cshtml
@@ -5,3 +5,10 @@
 <div class="text-center">
     <h1 class="display-4">Welcome Admin</h1>
 </div>
+<div class="row">
+    <div class="col d-flex justify-content-center">
+        <button class="btn btn-outline-dark" onclick="window.location.href = '@Url.Action("Index", "Products")'">
+            View Products
+        </button>
+    </div>
+</div>
