--- a/Project.web/Views/Home/Index.cshtml
+++ b/Project.web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<Project.Repository.ViewModels.OrderDetailsViewModel>
+@{
     ViewData["Title"] = "Home";
 }
 
@@ -10,5 +11,10 @@
         <button class="btn btn-outline-dark" onclick="window.location.href = '@Url.Action("Index", "Products")'">
             View Products
         </button>
+    </div>
+</div>
+<div class="row">
+    <div class="table-responsive">
+        @Html.Partial("_OrderDetails",Model)
     </div>
 </div>
