--- a/Project.web/Views/Order/Index.cshtml
+++ b/Project.web/Views/Order/Index.cshtml
@@ -64,7 +64,6 @@
     $("#CheckOutBtn").click(function () {
         console.log(model)
         model.orderId = 0;
-        model.status = "happy"
         $.ajax({
             url: "/Order/CheckOutOrder",
             type: "POST",
@@ -74,6 +73,10 @@
             success: function (data) {
                 if (data == "error") {
                     toastr.error("Error Occured","Error");
+                }
+                else if(data == "LowValue")
+                {
+                    toastr.error("Demanded items are not available in stock","Error");
                 }
                 else {
                     toastr.success("Order saved successfully", "Success");
