UI changes and added validations

--- a/Project.web/Views/Home/Index.cshtml
+++ b/Project.web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <h1 class="display-4">Welcome Admin</h1>
 </div>
 <div class="row">
-    <div class="col d-flex justify-content-center">
+    <div class="col d-flex justify-content-end mb-3">
         <button class="btn btn-outline-dark" onclick="window.location.href = '@Url.Action("Index", "Products")'">
             View Products
         </button>
@@ -24,7 +24,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title text-mute" id="exampleModalLabel">Special Instruction</h5>
+                <h5 class="modal-title text-mute" id="exampleModalLabel">Update Order Status</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form>
