--- a/Project.web/Views/Shared/_Layout.cshtml
+++ b/Project.web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PizzaShop</title>
+    <title>@ViewData["Title"] - Inventory</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -24,7 +24,7 @@
 <body>
     <nav class="navbar" id="Login-body">
         <div class="container-fluid">
-            <span class="text-light fst-italic fw-bold fs-2">PROJECT</span>
+            <span class="text-light fst-italic fw-bold fs-2">Inventory Management System</span>
             <button class="btn btn-outline-light fw-bold border-2" data-bs-toggle="modal" data-bs-target="#LogoutModal"
                 type="button">Logout</button>
         </div>
