--- a/Project.web/Views/Order/Index.cshtml
+++ b/Project.web/Views/Order/Index.cshtml
@@ -20,7 +20,7 @@
             <option value="" disabled selected>Select the Products</option>
             @foreach (var categories in Model.Items)
             {
-                <option value=@Html.Raw(Json.Serialize(categories))>@categories.Name
+                <option style="@(categories.Stock <= 5 ? "background-color: rgb(255, 189, 168)" : "") " value=@Html.Raw(Json.Serialize(categories))>@categories.Name
                 </option>
             }
         </select>
